# numerical_finance

./: CMakeLists.txt
include/: DiscreteGenerator.hpp  HeadTail.hpp  LinearCongruential.hpp  PseudoRandom.hpp  RandomGenerator.hpp  UniformGenerator.hpp
scripts/: DiscreteGenerator.cpp  HeadTail.cpp
src/: DiscreteGenerator.cpp  HeadTail.cpp  LinearCongruential.cpp  PseudoRandom.cpp  RandomGenerator.cpp  main.cpp
